add project intro block, and future carousel and accordion list

--- a/components/index.html
+++ b/components/index.html
@@ -37,6 +37,9 @@
       <li><a class="sidebar-link" href="#hero-image">hero image</a></li>
       <li><a class="sidebar-link" href="#prev-next-text">previous/next text</a></li>
       <li><a class="sidebar-link" href="#hero">hero</a></li>
+      <li><a class="sidebar-link" href="#project-intro-block">project intro block</a></li>
+      <li><a class="sidebar-link" href="#carousel">carousel with caption</a></li>
+      <li><a class="sidebar-link" href="#project-text-block">project text block</a></li>
       <li class="space">space</li>
       <li><a class="sidebar-link" href="#page-footer">PAGE FOOTER</a></li>
       <li><a class="sidebar-link" href="#footer-brand">footer-brand</a></li>
@@ -69,7 +72,6 @@
     </div>
     <div class="component__code">
       <div class="half-page-column">
-      <hr>
       <p>Created in 2007, Papier is the most important art fair in Quebec. The Montreal event is a driving force in the Canadian contemporary art market and is a space that creates opportunities for exchanges and encounters between the general public, art enthusiasts as well as professionals from the visual arts community.</p>
       <p>AGAC flagship project for now thirteen editions, Papier brings together forty or so of the most prestigious Canadian art galleries each year, both members and non-members of the Association, allowing the public to discover nearly 400 artists.</p>
       <p>Over the years, the fair has been awarded prestigious distinctions, including the Grafika award for its graphic identity, an award for its architectural design and has been named four years in a row by BizBash Magazine in the Top 100 Events in Canada.</p>
@@ -433,6 +435,7 @@
   </article>
 
     <!--PROJECT SECTION-->
+
     <h3 id="project-section">PROJECT SECTION</h3>
     <article class="component">
       <h3 id="hero-image">Hero image</h3>
@@ -476,8 +479,72 @@
           <p>Previous project | Next project</p>
         </div>
       </div>
+  </article>
+
+  <article class="component">
+    <h3 id="project-intro-block">Project intro block</h3>
+    <div class="component__image">
+      <img
+      srcset="screenshots/molecules/project-intro-block.png 2x"
+      src="screenshots/molecules/project-intro-block.png"
+      alt="project introduction text">
+    </div>
+    <div class="component__code">
+      <div class="project-intro-block">
+        <div class="half-page-column">
+          <p>Created in 2007, Papier is the most important art fair in Quebec. The Montreal event is a driving force in the Canadian contemporary art market and is a space that creates opportunities for exchanges and encounters between the general public, art enthusiasts as well as professionals from the visual arts community.</p>
+          <p>AGAC flagship project for now thirteen editions, Papier brings together forty or so of the most prestigious Canadian art galleries each year, both members and non-members of the Association, allowing the public to discover nearly 400 artists.</p>
+          <p>Over the years, the fair has been awarded prestigious distinctions, including the Grafika award for its graphic identity, an award for its architectural design and has been named four years in a row by BizBash Magazine in the Top 100 Events in Canada.</p>
+          <p><a href="!#">Visit Papier&#39;s website</a></p>
+        </div>
+      </div>
+    </div>
     </article>
 
+  <article class="component">
+    <h3 id="carousel">Carousel with caption</h3>
+    <div class="component__image">
+      <img
+      srcset="screenshots/atoms/carousel__slide-show.png 1.7x"
+      src="screenshots/atoms/carousel__slide-show.png"
+      alt="carousel">
+    </div>
+    <div class="component__code">
+      <div class="future-carousel">
+          <img src="../images/carousel__slide-show-05.png" alt="Papier14, Papier15 and Papier16 posters">
+          <p class="carousel__caption-text">Papier07 and Papier08 posters</p></div>
+      </div>
+  </article>
+
+  <article class="component">
+    <h3 id="project-text-block">Project text block</h3>
+    <div class="component__image">
+      <img
+      srcset="screenshots/molecules/project-text-block.png 2x"
+      src="screenshots/molecules/project-text-block.png"
+      alt="carousel">
+    </div>
+    <div class="component__code">
+        <h3>History of the Fair</h3>
+        <p>Over the years, Papier has become increasingly popular, drawing a growing number of art enthusiasts and seasoned collectors. Papier has been an important springboard for many artists, as well as the galleries that represent them.</p>
+        <div class="future-accordion-container">
+        <p class="future-accordion">2007 Inaugural edition</p>
+        <p class="future-accordion">2008 2nd edition</p>
+        <p class="future-accordion">2010 3rd edition</p>
+        <p class="future-accordion">2011 4th edition</p>
+        <p class="future-accordion">2012 5th edition</p>
+        <p class="future-accordion">2013 6th edition</p>
+        <p class="future-accordion">2014 7th edition</p>
+        <p class="future-accordion">2015 8th edition</p>
+        <p class="future-accordion">2016 9th edition</p>
+        <p class="future-accordion">2017 10th edition</p>
+        <p class="future-accordion">2018 11th edition</p>
+        <p class="future-accordion">2019 12th edition</p>
+        <p class="future-accordion">2020 13th edition</p>
+        <p class="future-accordion">2021 14th edition</p>
+        </div>
+</div>
+  </article>
 
   <!--footer components-->
 
