--- a/css/components.css
+++ b/css/components.css
@@ -346,7 +346,7 @@ footer
 .footer__gallery-list {
   grid-column: 1 / span 4;
   grid-row: 2 / span 2;
-  max-width: 1280;
+  max-width: 1280px;
   padding: 11px 0 0 0;
   border-top: 1px solid var(--medium-grey);
   display: flex;
