--- a/css/components.css
+++ b/css/components.css
@@ -7,6 +7,10 @@ layout defaults
   box-sizing: border-box;
 }
 
+body {
+  background-color: rgba(0,0,0,.03);
+  margin: 0;
+}
 html {
   --font-sans-serif: 'Figtree', sans-serif;
   --black: #000;
@@ -23,7 +27,7 @@ img {
 
 .wrapper {
   display: grid;
-  grid-gap: 20px;
+  gap: 0px;
   grid-template-columns: 320px minmax(0, 1fr);
   padding: 0;
   margin: 0;
@@ -35,7 +39,8 @@ img {
   grid-area: sidebar;
   background-color: #f5f5f5;
   padding: 15px 0 0 30px;
-  margin: 0 20px 0 0;
+  margin: 0;
+  border: 0;
 }
 
 .sidebar-nav {
@@ -59,8 +64,9 @@ img {
 .content {
   grid-area: content;
   flex: 1 0 auto;
-  padding: 0;
   margin: 0;
+  padding: 20px;
+  background-color: white;
 }
 
 .component__image {
@@ -162,6 +168,7 @@ header
 
 .header-main-nav {
   max-width: 1284px;
+  background-color: white;
   height: 54px;
   margin: auto;
   display: flex; 
@@ -205,6 +212,7 @@ a.nav:active {
   padding: 0;
 }
 .gallery {
+  background-color: white;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
   max-width: 1255px;
