--- a/css/components.css
+++ b/css/components.css
@@ -231,6 +231,10 @@ gallery
   display: grid;
 }
 
+.general-hardware {
+  margin: -30px 0 0 0;
+}
+
 .gallery-text {
   font-size: 28px;
   line-height: 31px;
