--- a/css/components.css
+++ b/css/components.css
@@ -142,6 +142,13 @@ a {
 header
 **/
 
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
 .header-main-nav {
   max-width: 1284px;
   background-color: white;
@@ -151,7 +158,7 @@ header
   align-items: center;
   justify-content: space-between;
   padding: 0;
-  border-bottom: 5px solid var(--lightest-grey);
+  box-shadow: 0px 2px 10px rgb(0 0 0 / 5%);;
 }
 
 .logo-square {
