--- a/components/index.html
+++ b/components/index.html
@@ -23,16 +23,16 @@
       <li><a class="sidebar-link" href="#a">a</a></li>
       <li><a class="sidebar-link" href="#headings">h1, h2, h3, h4, h5</a></li>
       <li><a class="sidebar-link" href="#text">other text styles</a></li>
-      <li class="space">space</li>
+      <li class="space">--</li>
       <li><a class="sidebar-link" href="#page-header">PAGE HEADER</a></li>
       <li><a class="sidebar-link" href="#header-home-button">header home button</a></li>
       <li><a class="sidebar-link" href="#header-main-nav">header main navigation</a></li>
-      <li class="space">space</li>
+      <li class="space">--</li>
       <li><a class="sidebar-link" href="#gallery-section">GALLERY SECTION</a></li>
       <li><a class="sidebar-link" href="#gallery-block">gallery block</a></li>
       <li><a class="sidebar-link" href="#gallery-block__letter">gallery block letter</a></li>
       <li><a class="sidebar-link" href="#gallery-collection">gallery collection</a></li>
-      <li class="space">space</li>
+      <li class="space">--</li>
       <li><a class="sidebar-link" href="#project-section">PROJECT SECTION</a></li>
       <li><a class="sidebar-link" href="#hero-image">hero image</a></li>
       <li><a class="sidebar-link" href="#prev-next-text">previous/next text</a></li>
@@ -40,7 +40,7 @@
       <li><a class="sidebar-link" href="#project-intro-block">project intro block</a></li>
       <li><a class="sidebar-link" href="#carousel">carousel with caption</a></li>
       <li><a class="sidebar-link" href="#project-text-block">project text block</a></li>
-      <li class="space">space</li>
+      <li class="space">--</li>
       <li><a class="sidebar-link" href="#page-footer">PAGE FOOTER</a></li>
       <li><a class="sidebar-link" href="#footer-brand">footer-brand</a></li>
       <li><a class="sidebar-link" href="#gallery-list">gallery-list</a></li>
