update accordion component

--- a/components/index.html
+++ b/components/index.html
@@ -527,22 +527,64 @@
         <h3>History of the Fair</h3>
         <p>Over the years, Papier has become increasingly popular, drawing a growing number of art enthusiasts and seasoned collectors. Papier has been an important springboard for many artists, as well as the galleries that represent them.</p>
         <div class="future-accordion-container">
-        <p class="future-accordion">2007 Inaugural edition</p>
-        <p class="future-accordion">2008 2nd edition</p>
-        <p class="future-accordion">2010 3rd edition</p>
-        <p class="future-accordion">2011 4th edition</p>
-        <p class="future-accordion">2012 5th edition</p>
-        <p class="future-accordion">2013 6th edition</p>
-        <p class="future-accordion">2014 7th edition</p>
-        <p class="future-accordion">2015 8th edition</p>
-        <p class="future-accordion">2016 9th edition</p>
-        <p class="future-accordion">2017 10th edition</p>
-        <p class="future-accordion">2018 11th edition</p>
-        <p class="future-accordion">2019 12th edition</p>
-        <p class="future-accordion">2020 13th edition</p>
-        <p class="future-accordion">2021 14th edition</p>
-        </div>
-</div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2007</p> 
+            <p class="future-accordion-edition">Inaugural edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2008</p> 
+            <p class="future-accordion-edition">2nd edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2010</p> 
+            <p class="future-accordion-edition">3rd edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2011</p> 
+            <p class="future-accordion-edition">4th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2012</p> 
+            <p class="future-accordion-edition">5th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2013</p> 
+            <p class="future-accordion-edition">6th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2014</p> 
+            <p class="future-accordion-edition">7th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2015</p> 
+            <p class="future-accordion-edition">8th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2016</p> 
+            <p class="future-accordion-edition">9th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2017</p> 
+            <p class="future-accordion-edition">10th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2018</p> 
+            <p class="future-accordion-edition">11th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2019</p> 
+            <p class="future-accordion-edition">12th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2020</p> 
+            <p class="future-accordion-edition">13th edition</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-year">2021</p> 
+            <p class="future-accordion-edition">14th edition</p>
+          </div> 
+        </div> <!--future accordion container-->
+    </div> <!--component code-->
   </article>
 
   <!--footer components-->
