refine accordion and spacing

--- a/components/index.html
+++ b/components/index.html
@@ -528,60 +528,74 @@
         <p>Over the years, Papier has become increasingly popular, drawing a growing number of art enthusiasts and seasoned collectors. Papier has been an important springboard for many artists, as well as the galleries that represent them.</p>
         <div class="future-accordion-container">
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2007</p> 
-            <p class="future-accordion-edition">Inaugural edition</p>
+            <p class="future-accordion-text">2007</p> 
+            <p class="future-accordion-text">Inaugural edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2008</p> 
-            <p class="future-accordion-edition">2nd edition</p>
+            <p class="future-accordion-text">2008</p> 
+            <p class="future-accordion-text">2nd edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2010</p> 
-            <p class="future-accordion-edition">3rd edition</p>
+            <p class="future-accordion-text">2010</p> 
+            <p class="future-accordion-text">3rd edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2011</p> 
-            <p class="future-accordion-edition">4th edition</p>
+            <p class="future-accordion-text">2011</p> 
+            <p class="future-accordion-text">4th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2012</p> 
-            <p class="future-accordion-edition">5th edition</p>
+            <p class="future-accordion-text">2012</p> 
+            <p class="future-accordion-text">5th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2013</p> 
-            <p class="future-accordion-edition">6th edition</p>
+            <p class="future-accordion-text">2013</p> 
+            <p class="future-accordion-text">6th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2014</p> 
-            <p class="future-accordion-edition">7th edition</p>
+            <p class="future-accordion-text">2014</p> 
+            <p class="future-accordion-text">7th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2015</p> 
-            <p class="future-accordion-edition">8th edition</p>
+            <p class="future-accordion-text">2015</p> 
+            <p class="future-accordion-text">8th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2016</p> 
-            <p class="future-accordion-edition">9th edition</p>
+            <p class="future-accordion-text">2016</p> 
+            <p class="future-accordion-text">9th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2017</p> 
-            <p class="future-accordion-edition">10th edition</p>
+            <p class="future-accordion-text">2017</p> 
+            <p class="future-accordion-text">10th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2018</p> 
-            <p class="future-accordion-edition">11th edition</p>
+            <p class="future-accordion-text">2018</p> 
+            <p class="future-accordion-text">11th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2019</p> 
-            <p class="future-accordion-edition">12th edition</p>
+            <p class="future-accordion-text">2019</p> 
+            <p class="future-accordion-text">12th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2020</p> 
-            <p class="future-accordion-edition">13th edition</p>
+            <p class="future-accordion-text">2020</p> 
+            <p class="future-accordion-text">13th edition</p>
+            <p class="future-accordion-text">+</p>
           </div>
           <div class="future-accordion-row">
-            <p class="future-accordion-year">2021</p> 
-            <p class="future-accordion-edition">14th edition</p>
+            <p class="future-accordion-text">2021</p> 
+            <p class="future-accordion-text">14th edition</p>
+            <p class="future-accordion-text">+</p>
           </div> 
         </div> <!--future accordion container-->
     </div> <!--component code-->
