--- a/css/components.css
+++ b/css/components.css
@@ -53,6 +53,7 @@ components page layout
 
 .sidebar-nav {
   position: fixed;
+  overflow-y: auto;
 }
 
 .sidebar-nav-list {
@@ -146,7 +147,7 @@ a {
 header
 **/
 
-header {
+.header-container {
   position: fixed;
   top: 0;
   width: 100%;
@@ -275,22 +276,6 @@ project page
   grid-template-columns: 1fr 1fr;
 }
 
-.head-subhead {
-  grid-column: 1 / span 2;
-  margin-bottom: 100px;
-}
-
-.half-page-column {
-  grid-column: 1;
-  grid-row: 2;
-  border-top: 1px solid var(--black);
-}
-
-.carousel__caption-text {
-  font-size: 11px;
-  color: var(--medium-grey)
-}
-
 .hero {
   background-color: white;
   padding: 56px 0 0 0;
@@ -305,9 +290,25 @@ project page
   padding: 0 0 2px 0;
 }
 
+.head-subhead {
+  grid-column: 1 / span 2;
+  margin-bottom: 100px;
+}
+
+.half-page-column {
+  grid-column: 1;
+  grid-row: 2;
+  border-top: 1px solid var(--black);
+}
+
 .future-carousel {
   border-top: 1px solid var(--black);
   padding: 18px 0 0 0;
+}
+
+.carousel__caption-text {
+  font-size: 11px;
+  color: var(--medium-grey)
 }
 
 .project-text-block {
@@ -355,6 +356,7 @@ footer {
   max-width: 1284px;
   margin: auto;
 }
+
 .footer-container {
   background-color: white;
   padding: 0px 40px;
